--- a/Documentos/JavaScrip Desafio/yami.html
+++ b/Documentos/JavaScrip Desafio/yami.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
-    <title>Desafio JavaScript</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Mi página de JavaScript</h1>
-
-<script src="./JS/script.js"></script>
+    <header>
+        <h1>Mi página de JavaScript</h1>
+    </header>
+    <main>
+      
+    </main>
+    <footer>
+      
+    </footer>
+<script src="./JS/prueba.js"></script>
 </body>
 </html>
+
+
