--- a/Documentos/JavaScrip Desafio/index.html
+++ b/Documentos/JavaScrip Desafio/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
-    <title>Desafio JavaScript</title>
+     <title>Desafio JavaScript</title>
 </head>
 <body>
     <h1>Mi página de JavaScript</h1>
 
-<script src="./JS/script.js"></script>
+<script src="./JS/prueba.js"></script>
 </body>
 </html>
